// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a danger button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 kIbNBe"
  color="danger"
  kind="default"
  size="md"
>
  Hello
</button>
`;

exports[`Button component renders a default button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 iJAzjI"
  color="primary"
  kind="default"
  size="md"
>
  Hello
</button>
`;

exports[`Button component renders a extra large button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 jJTQxI"
  color="primary"
  kind="default"
  size="xl"
>
  Hello
</button>
`;

exports[`Button component renders a ghost button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 kVStQG"
  color="info"
  kind="ghost"
  size="md"
>
  Hello
</button>
`;

exports[`Button component renders a large button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 kjIRiB"
  color="primary"
  kind="default"
  size="lg"
>
  Hello
</button>
`;

exports[`Button component renders a loading button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 iJAzjI"
  color="primary"
  disabled={true}
  kind="default"
  size="md"
>
  <svg
    className="Svg__SvgStyle-pyey0i-0 gYARyh"
    enableBackground="new 0 0 0 0"
    fill="none"
    height="24px"
    size={null}
    stroke="#8849bc"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    viewBox="0 0 512 512"
    width="24px"
    xmlSpace="preserve"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
      fill="#8849bc"
    >
      <animateTransform
        attributeName="transform"
        attributeType="XML"
        dur="1s"
        from="0 256 256"
        repeatCount="indefinite"
        to="360 256 256"
        type="rotate"
      />
    </path>
  </svg>
  Hello
</button>
`;

exports[`Button component renders a outline button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 ipGwoh"
  color="secondary"
  kind="outline"
  size="md"
>
  Hello
</button>
`;

exports[`Button component renders a round button with menu icon 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 dTtWyq"
  color="primary"
  kind="default"
  size="md"
>
  <svg
    className="Svg__SvgStyle-pyey0i-0 gYARyh"
    fill="none"
    height="24px"
    size={null}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="3"
      x2="21"
      y1="12"
      y2="12"
    />
    <line
      x1="3"
      x2="21"
      y1="6"
      y2="6"
    />
    <line
      x1="3"
      x2="21"
      y1="18"
      y2="18"
    />
  </svg>
</button>
`;

exports[`Button component renders a small button 1`] = `
<button
  className="ButtonStyle-sc-120zjl4-0 bkToAt"
  color="primary"
  kind="default"
  size="sm"
>
  Hello
</button>
`;
